force-app/main/default/objects/Activity/fields/Accepted_by_CU_Agent_timestamp__c.field-meta.xml
<CustomField>
    <fullName>Accepted_by_CU_Agent_timestamp__c</fullName>
    <label>Accepted by CU Agent timestamp</label>
    <type>DateTime</type>
</CustomField>