force-app/main/default/objects/Activity/fields/Accepted_Status_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Status_Timestamp__c</fullName>
    <description>MIS-4859</description>
    <label>Accepted Status Timestamp</label>
    <type>DateTime</type>
</CustomField>