force-app/main/default/objects/Activity/fields/AlignedPkg__Aligned_Activity__c.field-meta.xml
<CustomField>
    <fullName>AlignedPkg__Aligned_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aligned Activity</label>
    <referenceTo>AlignedPkg__Aligned_Activity__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>