force-app/main/default/objects/Activity/fields/All_tools_to_optimize_engagement_in_link__c.field-meta.xml
<CustomField>
    <fullName>All_tools_to_optimize_engagement_in_link__c</fullName>
    <formula>HYPERLINK(&quot;https://docs.google.com/presentation/d/1lDbtKJ_7HkBVxXWCHTlZ3aLYhaXuNc1Klc1fPa9_sEA/edit#slide=id.g2400e1fb31_0_147&quot;,&quot;Click here for AM Tool Repository&quot;)+BR()+HYPERLINK(&quot;https://goo.gl/MYvAoY&quot;,&quot;Click here for Customer Segmentation deck&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All tools to optimize engagement in link</label>
    <type>Text</type>
</CustomField>