force-app/main/default/objects/Activity/fields/Assigned_to_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Created_Date__c</fullName>
    <formula>Owner:User.User_Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to Created Date</label>
    <type>DateTime</type>
</CustomField>