force-app/main/default/objects/Activity/fields/Assignee_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Profile_Name__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignee Profile Name</label>
    <type>Text</type>
</CustomField>