force-app/main/default/objects/Activity/fields/Cadence_External_Identifier_SL__c.field-meta.xml
<CustomField>
    <fullName>Cadence_External_Identifier_SL__c</fullName>
    <label>Cadence External Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>