force-app/main/default/objects/Activity/fields/Cadence_Name_SL__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Name_SL__c</fullName>
    <label>Cadence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>