force-app/main/default/objects/Activity/fields/Campaign_Content_UTM__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Content_UTM__c</fullName>
    <label>Campaign Content UTM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>