force-app/main/default/objects/Activity/fields/Changed_from_Parent__c.field-meta.xml
<CustomField>
    <fullName>Changed_from_Parent__c</fullName>
    <label>Changed from Parent</label>
    <length>25</length>
    <type>Text</type>
</CustomField>