force-app/main/default/objects/Activity/fields/CLC_Task__c.field-meta.xml
<CustomField>
    <fullName>CLC_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CLC Task</label>
    <type>Checkbox</type>
</CustomField>