force-app/main/default/objects/Activity/fields/cloudtalk__activity_type__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__activity_type__c</fullName>
    <label>Activity Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>