force-app/main/default/objects/Activity/fields/cloudtalk__after_call_work_time__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__after_call_work_time__c</fullName>
    <label>After Call Work Time in Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>