force-app/main/default/objects/Activity/fields/cloudtalk__ai_call_details__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__ai_call_details__c</fullName>
    <label>AI Call Details</label>
    <type>Url</type>
</CustomField>