force-app/main/default/objects/Activity/fields/cloudtalk__ai_call_sentiment__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__ai_call_sentiment__c</fullName>
    <label>AI Call Sentiment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>