force-app/main/default/objects/Activity/fields/cloudtalk__ai_call_topics__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__ai_call_topics__c</fullName>
    <label>AI Call Topics</label>
    <type>TextArea</type>
</CustomField>