force-app/main/default/objects/Activity/fields/cloudtalk__Call_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__Call_Sentiment__c</fullName>
    <label>Call Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact - Bad Fit</fullName>
            </value>
            <value>
                <fullName>Demo Scheduled</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>Rescheduling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>