force-app/main/default/objects/Activity/fields/cloudtalk__CallDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__CallDateAndTime__c</fullName>
    <description>Call date and time</description>
    <label>Call date and time</label>
    <type>DateTime</type>
</CustomField>