force-app/main/default/objects/Activity/fields/cloudtalk__CallTags__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__CallTags__c</fullName>
    <description>Call tags from CloudTalk service</description>
    <label>Call Tags</label>
    <type>TextArea</type>
</CustomField>