force-app/main/default/objects/Activity/fields/cloudtalk__CallTime__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__CallTime__c</fullName>
    <description>Time of a call</description>
    <label>Call Time</label>
    <type>Time</type>
</CustomField>