force-app/main/default/objects/Activity/fields/cloudtalk__Campaign__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>