force-app/main/default/objects/Activity/fields/cloudtalk__ForwardedToExternalPhone__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__ForwardedToExternalPhone__c</fullName>
    <description>External phone number on which was the call forwarded.</description>
    <label>Forwarded to external phone</label>
    <type>Phone</type>
</CustomField>