force-app/main/default/objects/Activity/fields/cloudtalk__number_internal_name__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__number_internal_name__c</fullName>
    <label>Cloudtalk Number Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>