force-app/main/default/objects/Activity/fields/cloudtalk__Survey_Disposition__c.field-meta.xml
<CustomField>
    <fullName>cloudtalk__Survey_Disposition__c</fullName>
    <label>Campaign Call Disposition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>