force-app/main/default/objects/Activity/fields/Completed_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Completed_Timestamp__c</fullName>
    <label>Completed Timestamp</label>
    <type>DateTime</type>
</CustomField>