force-app/main/default/objects/Activity/fields/Contact_Form_Trigger_Path__c.field-meta.xml
<CustomField>
    <fullName>Contact_Form_Trigger_Path__c</fullName>
    <description>MIS-4153</description>
    <label>Contact Form Trigger Path</label>
    <type>TextArea</type>
</CustomField>