force-app/main/default/objects/Activity/fields/Contact_Us_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Id__c</fullName>
    <label>Contact Us Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>