force-app/main/default/objects/Activity/fields/contiens_reply__c.field-meta.xml
<CustomField>
    <fullName>contiens_reply__c</fullName>
    <formula>if ( CONTAINS( Subject , &quot;Reply&quot;), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>contiens reply</label>
    <type>Checkbox</type>
</CustomField>