force-app/main/default/objects/Activity/fields/CU_Reply_Type__c.field-meta.xml
<CustomField>
    <fullName>CU_Reply_Type__c</fullName>
    <label>CU Reply Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Off</fullName>
            </value>
            <value>
                <fullName>Engagement Program</fullName>
            </value>
            <value>
                <fullName>Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>