force-app/main/default/objects/Activity/fields/CU_Type_formula__c.field-meta.xml
<CustomField>
    <fullName>CU_Type_formula__c</fullName>
    <formula>IF((OR(CONTAINS(Subject,&quot;Pricing&quot;),CONTAINS(Subject,&quot;Subject line: Sales&quot;),CONTAINS(Subject,&quot;Book&quot;),CONTAINS(Subject,&quot;AP I&quot;))),&quot;Contact Form&quot;,&quot;Hook&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CU Type formula</label>
    <type>Text</type>
</CustomField>