force-app/main/default/objects/Activity/fields/Customer_feedback_and_summary__c.field-meta.xml
<CustomField>
    <fullName>Customer_feedback_and_summary__c</fullName>
    <label>Customer feedback and summary</label>
    <type>TextArea</type>
</CustomField>