force-app/main/default/objects/Activity/fields/Email_Template_Title_SL__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Title_SL__c</fullName>
    <label>Email Template Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>