force-app/main/default/objects/Activity/fields/Follow_renewal_guidelines_in_the_link__c.field-meta.xml
<CustomField>
    <fullName>Follow_renewal_guidelines_in_the_link__c</fullName>
    <formula>HYPERLINK(&quot;https://docs.google.com/presentation/d/1xA7XzGdR7Jah73AaO8ztUGh4i4YFAuHmTiZxGv7BNVw/edit&quot;, &quot;Click here for Opportunity and Quote Step-by-Step Guide&quot;)+BR()+
HYPERLINK(&quot;https://docs.google.com/spreadsheets/d/1qNDp2k7t9iZ_XcEae-vW7BAqqsZYdlhXd9TKDVLSfr8/edit#gid=1787289355&quot;, &quot;Click here for Deal Stages guide&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow renewal guidelines in the link</label>
    <type>Text</type>
</CustomField>