force-app/main/default/objects/Activity/fields/Form_Location_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_Location_URL__c</fullName>
    <label>Form Location URL</label>
    <type>TextArea</type>
</CustomField>