force-app/main/default/objects/Activity/fields/Generate_insights_w_PRO_CIG_Tool__c.field-meta.xml
<CustomField>
    <fullName>Generate_insights_w_PRO_CIG_Tool__c</fullName>
    <formula>HYPERLINK(&quot;http://labs.similarweb.com/&quot;, &quot;Click here to access CIG&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate insights w/PRO &amp; CIG Tool</label>
    <type>Text</type>
</CustomField>