force-app/main/default/objects/Activity/fields/Generate_utilization_summary_w_template__c.field-meta.xml
<CustomField>
    <fullName>Generate_utilization_summary_w_template__c</fullName>
    <formula>HYPERLINK(&quot;https://goo.gl/DWFBcu&quot;, &quot;Click here for Usage Analysis Template&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate utilization summary w/template</label>
    <type>Text</type>
</CustomField>