force-app/main/default/objects/Activity/fields/Guidelines_for_success__c.field-meta.xml
<CustomField>
    <fullName>Guidelines_for_success__c</fullName>
    <formula>If (RecordType.DeveloperName=&quot;Onboarding&quot; ,&quot;1. Remember to update the Product Implementation object&quot;+BR()+&quot;2. Use the following resources as explained below:&quot;,
If (RecordType.DeveloperName=&quot;QBR_Reminder&quot; ,&quot;Leverage QBRs to grow our impact on our customer&apos;s business by refining their goals with SW, understand changes in their priorities, and optimize their utilization. Use our QBR guidelines in the link below, and schedule the next QBR by the end of this one&quot;,
If (RecordType.DeveloperName=&quot;Renewal_Tasks&quot; , &quot;Remember to update the opp stages as the renewal discussions progress&quot; , &quot;&quot;
  ) 
 ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guidelines for success</label>
    <type>Text</type>
</CustomField>