force-app/main/default/objects/Activity/fields/Handraise_Flag__c.field-meta.xml
<CustomField>
    <fullName>Handraise_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-3208
Changed from Synced_from_SalesLoft__c at 23/11/22</description>
    <label>Handraise Flag</label>
    <type>Checkbox</type>
</CustomField>