force-app/main/default/objects/Activity/fields/Helpful_Tips__c.field-meta.xml
<CustomField>
    <fullName>Helpful_Tips__c</fullName>
    <label>Helpful Tips</label>
    <type>TextArea</type>
</CustomField>