force-app/main/default/objects/Activity/fields/How_to_Contact_User_Primary__c.field-meta.xml
<CustomField>
    <fullName>How_to_Contact_User_Primary__c</fullName>
    <description>MIS-4891</description>
    <label>How to Contact User Primary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>