force-app/main/default/objects/Activity/fields/HTML_Template_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>HTML_Template_Approval_Status__c</fullName>
    <label>HTML Template Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>