force-app/main/default/objects/Activity/fields/HTML_Template_Reviewer_Notes__c.field-meta.xml
<CustomField>
    <fullName>HTML_Template_Reviewer_Notes__c</fullName>
    <label>HTML Template Reviewer Notes</label>
    <type>TextArea</type>
</CustomField>