force-app/main/default/objects/Activity/fields/Is_CLC_Process__c.field-meta.xml
<CustomField>
    <fullName>Is_CLC_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generated by CLC</label>
    <type>Checkbox</type>
</CustomField>