force-app/main/default/objects/Activity/fields/Last_Contact_Us_Form_Hook_Description__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Us_Form_Hook_Description__c</fullName>
    <description>MIS-8010  CU forms - new description field for GTM</description>
    <label>Last Contact Us Form Hook Description</label>
    <type>TextArea</type>
</CustomField>