force-app/main/default/objects/Activity/fields/Link_to_QBR_Template__c.field-meta.xml
<CustomField>
    <fullName>Link_to_QBR_Template__c</fullName>
    <formula>HYPERLINK(&quot;https://docs.google.com/presentation/d/1oywc8y9ygkuckxXicAQY6qgImLF7ygxqNzVaFdMkrkc/edit?usp=sharing&quot;, &quot;Click here for QBR template&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to QBR Template</label>
    <type>Text</type>
</CustomField>