force-app/main/default/objects/Activity/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <label>Assignee Manager Email</label>
    <type>Email</type>
</CustomField>