force-app/main/default/objects/Activity/fields/Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Status__c</fullName>
    <description>MIS-272 Populated by Chili piper connector and manually by MIR</description>
    <label>Meeting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No_Show_CP</fullName>
            </value>
            <value>
                <fullName>Cancelled_CP</fullName>
            </value>
            <value>
                <fullName>Completed - no handover</fullName>
            </value>
            <value>
                <fullName>Completed - handover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>