force-app/main/default/objects/Activity/fields/Message_Status__c.field-meta.xml
<CustomField>
    <fullName>Message_Status__c</fullName>
    <description>Checks for the type of message by the subject.</description>
    <formula>IF( CONTAINS( Subject , &quot;Message Opened&quot;) , &quot;Message Opened&quot;, 
IF(CONTAINS( Subject , &quot;Message Sent&quot;) , &quot;Message Sent&quot;, 
IF(CONTAINS( Subject , &quot;Message Reply&quot;) , &quot;Message Reply&quot;, 
IF(CONTAINS( Subject , &quot;Bounce Received&quot;) , &quot;Bounce Received&quot;,
IF(CONTAINS( Subject , &quot;Message reply&quot;) , &quot;Message Reply&quot;,
IF(CONTAINS( Subject , &quot;Bounce received&quot;) , &quot;Bounce Received&quot;,
IF( CONTAINS( Subject , &quot;Message opened&quot;) , &quot;Message Opened&quot;, 
IF(CONTAINS( Subject , &quot;Message sent&quot;) , &quot;Message Sent&quot;,
IF(CONTAINS( Subject , &quot;Reply:&quot;) , &quot;Message Reply&quot;,
  &quot;Other&quot;)))))))))</formula>
    <label>Message Status</label>
    <type>Text</type>
</CustomField>