force-app/main/default/objects/Activity/fields/MIR_Handover_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>MIR_Handover_Rejection_Reason__c</fullName>
    <description>MIS-4859 - Changed field type from text area to picklist</description>
    <label>MIR Handover Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fake Data</fullName>
            </value>
            <value>
                <fullName>Free Tools Sufficient / One-Time Use</fullName>
            </value>
            <value>
                <fullName>Low Traffic</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Not a Good Fit: Use Case / Persona / Industry</fullName>
            </value>
            <value>
                <fullName>Not Ready / Bad Timing / No Interest</fullName>
            </value>
            <value>
                <fullName>Unreachable / No Reply</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
            <value>
                <fullName>Unverified: No Website / No LinkedIn</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>