force-app/main/default/objects/Activity/fields/No_Show_CP__c.field-meta.xml
<CustomField>
    <fullName>No_Show_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-388</description>
    <label>No Show CP</label>
    <type>Checkbox</type>
</CustomField>