force-app/main/default/objects/Activity/fields/of_call_attempts_daily__c.field-meta.xml
<CustomField>
    <fullName>of_call_attempts_daily__c</fullName>
    <defaultValue>1</defaultValue>
    <description>#1094119 Populates manually by MIRs</description>
    <label># of call attempts daily</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>