force-app/main/default/objects/Activity/fields/Owner_Sub_Division__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sub_Division__c</fullName>
    <description>For reporting purpose</description>
    <formula>TEXT(Owner:User.Sub_Division__c)</formula>
    <label>Owner Sub Division</label>
    <type>Text</type>
</CustomField>