force-app/main/default/objects/Activity/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>MIS-4891</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>