force-app/main/default/objects/Activity/fields/Previous_Assignee_Email__c.field-meta.xml
<CustomField>
    <fullName>Previous_Assignee_Email__c</fullName>
    <label>Previous Assignee Email</label>
    <type>Email</type>
</CustomField>