force-app/main/default/objects/Activity/fields/Previous_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner__c</fullName>
    <label>Previous Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>