force-app/main/default/objects/Activity/fields/Queue_Name_CP__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name_CP__c</fullName>
    <description>Populated by Chili Piper</description>
    <label>CP Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>