force-app/main/default/objects/Activity/fields/Related_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Related_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-4859</description>
    <label>Related Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>