force-app/main/default/objects/Activity/fields/Related_to_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Object__c</fullName>
    <formula>IF(
         not(isblank(WhatId)),
        CASE(LEFT(WhatId, 3) ,
                  &apos;001&apos;, &apos;Account&apos;,
                  &apos;006&apos;, &apos;Opportunity&apos;,
                  &apos;800&apos;, &apos;Contract&apos;,
                  &apos;0Q0&apos;, &apos;Quote&apos;,
                  &apos;003&apos;, &apos;Contact&apos;,
                  &apos;00T&apos;, &apos;Task&apos;,
                  &apos;00U&apos;, &apos;Event&apos;,
                  &apos;a0t&apos;, &apos;Meeting&apos;,
                  LEFT(WhatId, 3)
                  ),
        CASE(LEFT(WhoId, 3) ,
                  &apos;00Q&apos;, &apos;Lead&apos;,
                  &apos;003&apos;, &apos;Contact&apos;,
                  LEFT(WhoId, 3)
                  )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related to Object</label>
    <type>Text</type>
</CustomField>