force-app/main/default/objects/Activity/fields/Response_Status_CP__c.field-meta.xml
<CustomField>
    <fullName>Response_Status_CP__c</fullName>
    <description>MIS-388</description>
    <label>Response_Status_CP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>