force-app/main/default/objects/Activity/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>Indicates on the System which created the Task.</inlineHelpText>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admetricks</fullName>
            </value>
            <value>
                <fullName>GetFeedback</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>SalesForce</fullName>
            </value>
            <value>
                <fullName>SalesLoft</fullName>
            </value>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>