force-app/main/default/objects/Activity/fields/Step_Day_SL__c.field-meta.xml
<CustomField>
    <fullName>Step_Day_SL__c</fullName>
    <label>Step Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>