force-app/main/default/objects/Activity/fields/Step_Name__c.field-meta.xml
<CustomField>
    <fullName>Step_Name__c</fullName>
    <description>DO NOT DELETE USED FOR MARKETING JOURNEY</description>
    <label>Step Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>