force-app/main/default/objects/Activity/fields/Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Sub_type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>&quot;Snail Mail&quot;/Package</fullName>
            </value>
            <value>
                <fullName>Attachment Opened in Message</fullName>
            </value>
            <value>
                <fullName>Attempt/ Left message</fullName>
            </value>
            <value>
                <fullName>Bounce Received</fullName>
            </value>
            <value>
                <fullName>Call Attempt</fullName>
            </value>
            <value>
                <fullName>Call Conversation</fullName>
            </value>
            <value>
                <fullName>Chat Attempt</fullName>
            </value>
            <value>
                <fullName>Chat Conversation</fullName>
            </value>
            <value>
                <fullName>Chili Piper</fullName>
            </value>
            <value>
                <fullName>Commercial Conversation (Sale, Upsell, Renewal)</fullName>
            </value>
            <value>
                <fullName>Commercial talks (Sale, upsell, renewal)</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Conversation</fullName>
            </value>
            <value>
                <fullName>Customer Individual training</fullName>
            </value>
            <value>
                <fullName>Customer Kickoff call</fullName>
            </value>
            <value>
                <fullName>Customer Team training</fullName>
            </value>
            <value>
                <fullName>Decision Maker demo</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Entertainment (Dinner/Social Event)</fullName>
            </value>
            <value>
                <fullName>Executive briefing</fullName>
            </value>
            <value>
                <fullName>Follow-up call</fullName>
            </value>
            <value>
                <fullName>FRO Hook Attempt</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Kick Off</fullName>
            </value>
            <value>
                <fullName>Legal call</fullName>
            </value>
            <value>
                <fullName>Link Clicked in Message</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Message Opened</fullName>
            </value>
            <value>
                <fullName>Message Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>