force-app/main/default/objects/Activity/fields/Task_Created_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Task_Created_Timestamp__c</fullName>
    <formula>CreatedDate</formula>
    <label>Task Created Timestamp</label>
    <type>DateTime</type>
</CustomField>