force-app/main/default/objects/Activity/fields/tr_wc1__Resolution_Status__c.field-meta.xml
<CustomField>
    <fullName>tr_wc1__Resolution_Status__c</fullName>
    <label>Resolution Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>