force-app/main/default/objects/Activity/fields/tr_wc1__Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>tr_wc1__Risk_Level__c</fullName>
    <label>Risk Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>