force-app/main/default/objects/Activity/fields/tr_wc1__ScreeningCaseIds__c.field-meta.xml
<CustomField>
    <fullName>tr_wc1__ScreeningCaseIds__c</fullName>
    <externalId>true</externalId>
    <label>ScreeningCaseIds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>